--- a/config/locales/activerecord.ja.yml
+++ b/config/locales/activerecord.ja.yml
@@ -36,7 +36,7 @@ ja:
         status:
           attributes:
             reblog:
-              taken: は既にリキュア！されています
+              taken: は既にリキュアされています
         user:
           attributes:
             email:
