--- a/config/locales/simple_form.ja.yml
+++ b/config/locales/simple_form.ja.yml
@@ -59,9 +59,6 @@ ja:
         setting_display_media_default: 閲覧注意としてマークされたメディアは隠す
         setting_display_media_hide_all: メディアを常に隠す
         setting_display_media_show_all: メディアを常に表示する
-        setting_hide_network: フォローとフォロワーの情報がプロフィールページで見られないようにします
-        setting_noindex: 公開プロフィールおよび各キュア！ページに影響します
-        setting_show_application: キュア！するのに使用したアプリがキュア！の詳細ビューに表示されるようになります
         setting_use_blurhash: ぼかしはメディアの色を元に生成されますが、細部は見えにくくなっています
         setting_use_pending_items: 新着があってもタイムラインを自動的にスクロールしないようにします
         username: アルファベット大文字と小文字、数字、アンダーバー「_」が使えます
@@ -110,7 +107,7 @@ ja:
       imports:
         data: 他のMastodonサーバーからエクスポートしたCSVファイルを選択して下さい
       invite_request:
-        text: このサーバーは現在承認制です。申請を承認する際に役立つ、ダイの大冒険への思い入れを添えてください。推しキャラだけでも構いません。
+        text: このサーバーは現在承認制です。申請を承認する際に役立つ、プリキュアへの思い入れを添えてください。推しキュアだけでも構いません。
       ip_block:
         comment: オプションです。このルールを追加した理由の覚え書きにご利用ください。
         expires_in: IPアドレスは有限のリソースです。複数人で共有されたり変更されることもあります。そのため無期限にIPアドレスをブロックするのは推奨されません。
