このサーバー→このコミュニティ

--- a/app/javascript/mastodon/locales/ja.json
+++ b/app/javascript/mastodon/locales/ja.json
@@ -306,7 +306,7 @@
   "filtered_notifications_banner.pending_requests": "{count, plural,  =0 {すべて完了しました} other {#人の通知がブロックされています}}",
   "filtered_notifications_banner.title": "保留中の通知",
   "firehose.all": "すべて",
-  "firehose.local": "このサーバー",
+  "firehose.local": "このコミュニティ",
   "firehose.remote": "ほかのサーバー",
   "follow_request.authorize": "許可",
   "follow_request.reject": "拒否",
@@ -386,7 +386,7 @@
   "interaction_modal.login.prompt": "登録したサーバーのドメイン (例: mastodon.social)",
   "interaction_modal.no_account_yet": "Mastodonにアカウントがない場合は",
   "interaction_modal.on_another_server": "別のサーバー",
-  "interaction_modal.on_this_server": "このサーバー",
+  "interaction_modal.on_this_server": "このコミュニティ",
   "interaction_modal.sign_in": "このサーバーにアカウントがなくても、ほかのサーバーや互換性のあるプラットフォームのアカウントを使用できます。",
   "interaction_modal.sign_in_hint": "ワンポイント: ここでは自分のアカウントのドメインを入力します。うまくいかない場合はドメインまで含めた完全なユーザー名を入力してみてください (例: @Mastodon@mastodon.social)。ドメインやユーザー名は登録完了時のメールに記載されています。",
   "interaction_modal.title.favourite": "{name}さんのキュア！をお気に入り登録",
