--- a/app/javascript/mastodon/locales/ja.json
+++ b/app/javascript/mastodon/locales/ja.json
@@ -834,12 +834,10 @@
   "tabs_bar.notifications": "通知",
   "tabs_bar.search": "検索",
   "tagset.change": "実況用タグセット",
-  "tagset.empty.long": "タグを削除し、実況を終了する",
+  "tagset.empty.long": "タグセットを削除し、実況を終了する",
   "tagset.empty.short": "タグなし",
   "tagset.episodes.long": "モロヘイヤのエピソードブラウザを開く",
   "tagset.episodes.short": "ほかのエピソード",
-  "tagset.hide_livecure": "実況キュア！を非表示",
-  "tagset.show_livecure": "実況キュア！を表示",
   "time_remaining.days": "残り{number}日",
   "time_remaining.hours": "残り{number}時間",
   "time_remaining.minutes": "残り{number}分",
