--- a/app/javascript/mastodon/locales/ja.json
+++ b/app/javascript/mastodon/locales/ja.json
@@ -833,6 +833,7 @@
   "tabs_bar.home": "ホーム",
   "tabs_bar.notifications": "通知",
   "tabs_bar.search": "検索",
+  "tagset.label": "実況",
   "tagset.change": "実況用タグセット",
   "tagset.empty.long": "タグセットを削除し、実況を終了する",
   "tagset.empty.short": "タグなし",
