--- a/app/javascript/mastodon/locales/ja.json
+++ b/app/javascript/mastodon/locales/ja.json
@@ -209,7 +209,7 @@
   "directory.recently_active": "最近の活動順",
   "disabled_account_banner.account_settings": "アカウント設定",
   "disabled_account_banner.text": "あなたのアカウント『{disabledAccount}』は現在無効になっています。",
-  "dismissable_banner.community_timeline": "これらは{domain}がホストしている人たち等、 #delmulin タグを含む最新の公開キュア！です。",
+  "dismissable_banner.community_timeline": "これらは{domain}がホストしている人たち等、 #delmulin タグを含む最新の公開投稿です。",
   "dismissable_banner.dismiss": "閉じる",
   "dismissable_banner.explore_links": "ネットワーク上で話題になっているニュースです。たくさんのユーザーにシェアされた記事ほど上位に表示されます。",
   "dismissable_banner.explore_statuses": "ネットワーク上で注目を集めている投稿です。ブーストやお気に入り登録の多い新しい投稿が上位に表示されます。",
@@ -833,13 +833,14 @@
   "tabs_bar.home": "ホーム",
   "tabs_bar.notifications": "通知",
   "tabs_bar.search": "検索",
+  "tagset.label": "実況",
   "tagset.change": "実況用タグセット",
-  "tagset.empty.long": "タグを削除し、実況を終了する",
+  "tagset.empty.long": "タグセットを削除し、実況を終了する",
   "tagset.empty.short": "タグなし",
   "tagset.episodes.long": "モロヘイヤのエピソードブラウザを開く",
   "tagset.episodes.short": "ほかのエピソード",
-  "tagset.hide_livecure": "実況投稿を非表示",
-  "tagset.show_livecure": "実況投稿を表示",
+  "tagset.reload.long": "番組表を更新する",
+  "tagset.reload.short": "リロード",
   "time_remaining.days": "残り{number}日",
   "time_remaining.hours": "残り{number}時間",
   "time_remaining.minutes": "残り{number}分",
