--- a/app/javascript/mastodon/locales/ja.json
+++ b/app/javascript/mastodon/locales/ja.json
@@ -839,8 +839,8 @@
   "tagset.empty.short": "タグなし",
   "tagset.episodes.long": "モロヘイヤのエピソードブラウザを開く",
   "tagset.episodes.short": "ほかのエピソード",
-  "tagset.reload.long": "実況番組表を更新する",
-  "tagset.reload.short": "リロード",
+  "tagset.reload.long": "モロヘイヤから番組表をダウンロードする",
+  "tagset.reload.short": "実況番組表を更新",
   "time_remaining.days": "残り{number}日",
   "time_remaining.hours": "残り{number}時間",
   "time_remaining.minutes": "残り{number}分",
