--- a/app/javascript/mastodon/locales/ja.json
+++ b/app/javascript/mastodon/locales/ja.json
@@ -833,11 +833,14 @@
   "tabs_bar.home": "ホーム",
   "tabs_bar.notifications": "通知",
   "tabs_bar.search": "検索",
+  "tagset.label": "実況",
   "tagset.change": "実況用タグセット",
-  "tagset.empty.long": "タグを削除し、実況を終了する",
+  "tagset.empty.long": "タグセットを削除し、実況を終了する",
   "tagset.empty.short": "タグなし",
   "tagset.episodes.long": "モロヘイヤのエピソードブラウザを開く",
   "tagset.episodes.short": "ほかのエピソード",
+  "tagset.reload.long": "モロヘイヤから番組表をダウンロードする",
+  "tagset.reload.short": "実況番組表を更新",
   "time_remaining.days": "残り{number}日",
   "time_remaining.hours": "残り{number}時間",
   "time_remaining.minutes": "残り{number}分",
