--- a/app/javascript/mastodon/locales/en.json
+++ b/app/javascript/mastodon/locales/en.json
@@ -757,6 +757,9 @@
   "search_popout.recent": "Recent searches",
   "search_popout.specific_date": "specific date",
   "search_popout.user": "user",
+  "search_popout.services": "External search services",
+  "search_popout.fediver": "Fediver",
+  "search_popout.notestock": "notestock",
   "search_results.accounts": "Profiles",
   "search_results.all": "All",
   "search_results.hashtags": "Hashtags",
