--- a/app/javascript/mastodon/locales/ja.json
+++ b/app/javascript/mastodon/locales/ja.json
@@ -754,6 +754,9 @@
   "search_popout.recent": "最近の検索",
   "search_popout.specific_date": "特定の日付",
   "search_popout.user": "ユーザー",
+  "search_popout.services": "外部の検索サービス",
+  "search_popout.fediver": "Fediver",
+  "search_popout.notestock": "notestock",
   "search_results.accounts": "ユーザー",
   "search_results.all": "すべて",
   "search_results.hashtags": "ハッシュタグ",
