--- a/app/javascript/mastodon/locales/en.json
+++ b/app/javascript/mastodon/locales/en.json
@@ -309,7 +309,7 @@
   "filtered_notifications_banner.pending_requests": "From {count, plural, =0 {no one} one {one person} other {# people}} you may know",
   "filtered_notifications_banner.title": "Filtered notifications",
   "firehose.all": "All",
-  "firehose.local": "This server",
+  "firehose.local": "This community",
   "firehose.remote": "Other servers",
   "follow_request.authorize": "Authorize",
   "follow_request.reject": "Reject",
@@ -757,6 +757,9 @@
   "search_popout.recent": "Recent searches",
   "search_popout.specific_date": "specific date",
   "search_popout.user": "user",
+  "search_popout.services": "External search services",
+  "search_popout.fediver": "Fediver",
+  "search_popout.notestock": "notestock",
   "search_results.accounts": "Profiles",
   "search_results.all": "All",
   "search_results.hashtags": "Hashtags",
