--- a/app/javascript/mastodon/locales/ja.json
+++ b/app/javascript/mastodon/locales/ja.json
@@ -209,7 +209,7 @@
   "directory.recently_active": "最近の活動順",
   "disabled_account_banner.account_settings": "アカウント設定",
   "disabled_account_banner.text": "あなたのアカウント『{disabledAccount}』は現在無効になっています。",
-  "dismissable_banner.community_timeline": "これらは{domain}がホストしている人たちの最新の公開投稿です。",
+  "dismissable_banner.community_timeline": "これらは{domain}がホストしている人たち等、 #precure_fun タグを含む最新の公開投稿です。",
   "dismissable_banner.dismiss": "閉じる",
   "dismissable_banner.explore_links": "ネットワーク上で話題になっているニュースです。たくさんのユーザーにシェアされた記事ほど上位に表示されます。",
   "dismissable_banner.explore_statuses": "ネットワーク上で注目を集めている投稿です。ブーストやお気に入り登録の多い新しい投稿が上位に表示されます。",
@@ -306,7 +306,7 @@
   "filtered_notifications_banner.pending_requests": "{count, plural,  =0 {すべて完了しました} other {#人の通知がブロックされています}}",
   "filtered_notifications_banner.title": "保留中の通知",
   "firehose.all": "すべて",
-  "firehose.local": "このサーバー",
+  "firehose.local": "このコミュニティ",
   "firehose.remote": "ほかのサーバー",
   "follow_request.authorize": "許可",
   "follow_request.reject": "拒否",
@@ -386,7 +386,7 @@
   "interaction_modal.login.prompt": "登録したサーバーのドメイン (例: mastodon.social)",
   "interaction_modal.no_account_yet": "Mastodonにアカウントがない場合は",
   "interaction_modal.on_another_server": "別のサーバー",
-  "interaction_modal.on_this_server": "このサーバー",
+  "interaction_modal.on_this_server": "このコミュニティ",
   "interaction_modal.sign_in": "このサーバーにアカウントがなくても、ほかのサーバーや互換性のあるプラットフォームのアカウントを使用できます。",
   "interaction_modal.sign_in_hint": "ワンポイント: ここでは自分のアカウントのドメインを入力します。うまくいかない場合はドメインまで含めた完全なユーザー名を入力してみてください (例: @Mastodon@mastodon.social)。ドメインやユーザー名は登録完了時のメールに記載されています。",
   "interaction_modal.title.favourite": "{name}さんの投稿をお気に入り登録",
@@ -754,6 +754,9 @@
   "search_popout.recent": "最近の検索",
   "search_popout.specific_date": "特定の日付",
   "search_popout.user": "ユーザー",
+  "search_popout.services": "外部の検索サービス",
+  "search_popout.fediver": "Fediver",
+  "search_popout.notestock": "notestock",
   "search_results.accounts": "ユーザー",
   "search_results.all": "すべて",
   "search_results.hashtags": "ハッシュタグ",
